--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = "0.11.8"
 rand = "0.8.5"
 sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2" }
